--- a/node-cheese-cake/views/layouts/layout.hbs
+++ b/node-cheese-cake/views/layouts/layout.hbs
@@ -18,6 +18,8 @@
   </head>
   <body>
     {{> header}}
-    {{{body}}}
+    <div class="container">
+      {{{body}}}
+    </div>
   </body>
 </html>
