--- a/node-cheese-cake/views/register.hbs
+++ b/node-cheese-cake/views/register.hbs
@@ -1,14 +1,12 @@
+{{> messages }}
+
 <div class="container">
     <h1>Create a new Account</h1>
 
-    <form class="signup" action="#" id="registration" method="POST">
+    <form class="signup" action="/auth/register" id="registration" method="POST">
         <div class="form-group">
-            <label for="firstname" class="form-label">First Name</label>
-            <input type="text" class="form-control" name="firstname" id="firstname">
-        </div>
-        <div class="form-group">
-            <label for="lastname" class="form-label">Last Name</label>
-            <input type="text" class="form-control" name="lastname" id="lastname">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" name="name" id="name">
         </div>
         <div class="form-group">
             <label for="username" class="form-label">Username</label>
@@ -22,10 +20,7 @@
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" name="password" id="password">
         </div>
-        <div class="form-group">
-            <label for="password1" class="form-label">Confirm Password</label>
-            <input type="password" class="form-control" name="password1" id="password1">
-        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+<p>Or <a href="/auth/login">Login</a> if you already have an account.</p>
 </div>
