Includes displaying products, add functionality for admin

--- a/node-cheese-cake/public/stylesheets/form_validation_style.css
+++ b/node-cheese-cake/public/stylesheets/form_validation_style.css
@@ -11,7 +11,12 @@
     color: #fff;
     background-color: #FFAC33;
     border-color: #FFAC33;
-    font-size: xx-large;
+}
+
+.btn-outline-success:not(:disabled):not(.disabled).active, .btn-outline-success:not(:disabled):not(.disabled):active, .show>.btn-outline-success.dropdown-toggle {
+    color: #fff;
+    background-color: #FFAC33;
+    border-color: #FFAC33;
 }
 
 .dropdown-item {
