--- a/node-cheese-cake/views/shop/index.hbs
+++ b/node-cheese-cake/views/shop/index.hbs
@@ -1,10 +1,22 @@
 <div class="text-center">
     <img src="./images/cheeseshoplogo.png" class="rounded" alt="Cheese Shop Logo">
-    <h1>Welcome to The Cheese Shop! We sell high-quality cheese products.
+    <h3>Welcome to The Cheese Shop! We sell high-quality cheese products.
         <br>
         <small class="text-muted">We are excited for you to shop with us.</small>
-    </h1>
+    </h3>
 </div>
-
+<hr>
 <div id = "cheeseoptions">
+  	{{#each products}}
+	  	<div class="text-center">
+			<h4>{{this.title}}</h4>
+			<div>
+				<img src="images/{{this.image}}" style="width:200px; height:200px;" class="img-thumbnail"/> 
+				<p>{{this.description}}</p>
+			</div>
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add to Cart</button>
+			<hr>
+			<br>
+		</div>
+  	{{/each}}
 </div>
