--- a/node-cheese-cake/views/user/signupTemp.hbs
+++ b/node-cheese-cake/views/user/signupTemp.hbs
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container signin-parent">
     <h1>Create a new Account</h1>
 
-    <form class="signup" action="#" id="registration" method="POST">
+    <form class="signup" action="" id="registration" method="POST">
         <div class="form-group">
             <label for="firstname" class="form-label">First Name</label>
             <input type="text" class="form-control" name="firstname" id="firstname">
