--- a/node-cheese-cake/views/partials/header.hbs
+++ b/node-cheese-cake/views/partials/header.hbs
@@ -6,7 +6,7 @@
     <div class="navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" h ref="/">Shop <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/cheese">Shop <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -22,14 +22,18 @@
             </li>
         </ul>
     </div>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-shopping-cart"></i>  Shopping Cart</button>
+    <a href="/shopping-cart/">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-shopping-cart"></i>  Shopping Cart
+            <span class="badge badge-light">{{ session.cart.totalQty }}</span>
+        </button>
+    </a>
     {{# if login}}
         <li role="separator" class="split-pane-divider"></li>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a class="user-buttons" href="/user/logout"><i class="fas fa-sign-out-alt"></i>  LogOut </a></button>
     {{else}}
-        <li role="separator" class="split-pane-divider"></li>
+        <li role="separator" class="divider"></li>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a class="user-buttons" href="/user/signup"><i class="fas fa-user-plus"></i>  SignUp </a></button>
-        <li role="separator" class="split-pane-divider"></li>
+        <li role="separator" class="divider"></li>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a class="user-buttons" href="/user/signin"><i class="fas fa-sign-in-alt"></i>  LogIn </a></button>
     {{/if}}
 </nav>
