--- a/node-cheese-cake/views/shop/cheese.hbs
+++ b/node-cheese-cake/views/shop/cheese.hbs
@@ -1,3 +1,11 @@
+<div class="row">
+    <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+        <div id="success" class="alert alert-success" {{#if noMessages}}hidden{{/if}}>
+            {{ successMsg }}
+        </div>
+    </div>
+</div>
+
 {{# each products}}
     <div class="row card-row">
         {{# each this }}
@@ -7,11 +15,11 @@
                         <img src="{{ this.imagePath }}" class="card-img-top" alt="CheeseImage"/> <!--./images/cheesenavbar.png-->
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Cheese Type 1</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">{{ this.title }}</h5>
+                        <p class="card-text">{{ this.description }}</p>
                         <div class="clearfix">
-                            <div class="card-price float-left">2$</div>
-                            <a href="#" class="btn btn-warning float-right" role="button">Add to cart</a>
+                            <div class="card-price float-left">{{ this.price }}</div>
+                            <a href="/add-to-cart/{{ this._id }}" class="btn btn-warning float-right" role="button">Add to cart</a>
                         </div>
                     </div>
                 </div>
