--- a/node-cheese-cake/views/user/signin.hbs
+++ b/node-cheese-cake/views/user/signin.hbs
@@ -21,6 +21,7 @@
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <button type="submit" class="btn btn-primary">Sign In</button>
             </form>
+            <p>Don't have an account? <a href="/user/signup">Sign Up Instead!</a></p>
         </div>
     </div>
 </div>
