Updated CSS and added name of user logging in to session for display.

--- a/node-cheese-cake/views/layouts/layout.hbs
+++ b/node-cheese-cake/views/layouts/layout.hbs
@@ -19,7 +19,7 @@
   </head>
   <body>
     {{> header}}
-    <div class="container main-body">
+    <div class="container">
         {{{body}}}
     </div>
   </body>
