--- a/node-cheese-cake/views/shop/shopping-cart.hbs
+++ b/node-cheese-cake/views/shop/shopping-cart.hbs
@@ -1,18 +1,28 @@
 {{# if products}}
-    <div class="row">
+    <div class="row card-row">
         <div class="col-sm-6 col-md-7 col-md-offset-3 col-sm-offset-3">
             <ul class="list-group">
                 {{# each products}}
                     <li class="list-group-item">
-                        <span class="badge">{{ this.qty }}</span>
-                        <strong>{{ this.item.title }}</strong>
-                        <span class="label label-success">{{this.price}}</span>
-                        <div class="btn-group">
-                            <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Action <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                                <li><a href="/reduce/{{this.item._id}}">Reduce By 1</a></li>
-                                <li><a href="/remove/{{this.item._id}}/">Remove All</a></li>
-                            </ul>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <strong>{{ this.item.title }}</strong>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="label label-success">{{this.price}}</span>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="badge">{{ this.qty }}</span>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="btn-group">
+                                    <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Action <span class="caret"></span></button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/reduce/{{this.item._id}}">Reduce By 1</a></li>
+                                        <li><a class="dropdown-item" href="/remove/{{this.item._id}}/">Remove All</a></li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </li>
                 {{/each}}
@@ -32,7 +42,7 @@
         </div>
     </div>
 {{else}}
-    <div class="row">
+    <div class="row main-body">
         <div class="col-sm-6 col-md-5 col-md-offset-3 col-sm-offset-3">
             <h2>No Items in cart</h2>
         </div>
