--- a/node-cheese-cake/views/user/signup.hbs
+++ b/node-cheese-cake/views/user/signup.hbs
@@ -11,6 +11,10 @@
             {{/if}}
             <form class="signup" action="/user/signup" id="registration" method="POST">
                 <div class="form-group">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" name="name" id="name">
+                </div>
+                <div class="form-group">
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" class="form-control" name="email" id="email">
                 </div>
