--- a/node-cheese-cake/views/layouts/layout.hbs
+++ b/node-cheese-cake/views/layouts/layout.hbs
@@ -19,7 +19,7 @@
   </head>
   <body>
     {{> header}}
-    <div class="container">
+    <div class="container-fluid">
         {{{body}}}
     </div>
   </body>
