--- a/node-cheese-cake/views/shop/cheese.hbs
+++ b/node-cheese-cake/views/shop/cheese.hbs
@@ -6,6 +6,18 @@
     </div>
 </div>
 
+<div class="row" style="min-height: 100%;">
+    <div class="col-md-2" style="background-color: #DEDEDE; padding: 10px;min-height:100%">
+        <form action="/" method="GET">
+            <div class="form-group">
+                <label for="searchByName">Search</label>
+                <input type="text" class="form-control" name="searchByName" placeholder="Search by Name">
+            </div>
+            <button type="submit" class="btn-dark">Search</button>
+        </form>
+    </div>
+    <div class="col-md-10">
+
 {{# each products}}
     <div class="row card-row">
         {{# each this }}
@@ -27,3 +39,6 @@
         {{/each}}
     </div>
 {{/each}}
+
+    </div>
+</div>
