--- a/node-cheese-cake/views/layouts/layout.hbs
+++ b/node-cheese-cake/views/layouts/layout.hbs
@@ -19,8 +19,9 @@
   </head>
   <body>
     {{> header}}
-    <div class="container-fluid">
+    <div class="container-fluid" style="height: 95vh">
         {{{body}}}
     </div>
+    {{> footer}}
   </body>
 </html>
