--- a/node-cheese-cake/views/shop/cheese.hbs
+++ b/node-cheese-cake/views/shop/cheese.hbs
@@ -1,11 +1,3 @@
-<div class="row">
-    <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
-        <div id="success" class="alert alert-success" {{#if noMessages}}hidden{{/if}}>
-            {{ successMsg }}
-        </div>
-    </div>
-</div>
-
 <div class="row" style="min-height: 100%;">
     <div class="col-md-2" style="background-color: #DEDEDE; padding: 10px;min-height:100%">
         <form action="/" method="GET">
@@ -16,29 +8,153 @@
             <button type="submit" class="btn-dark">Search</button>
         </form>
     </div>
-    <div class="col-md-10">
 
-{{# each products}}
-    <div class="row card-row">
-        {{# each this }}
-            <div class="col-sm-6 col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-image">
-                        <img src="{{ this.imagePath }}" class="card-img-top" alt="CheeseImage"/> <!--./images/cheesenavbar.png-->
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">{{ this.title }}</h5>
-                        <p class="card-text">{{ this.description }}</p>
-                        <div class="clearfix">
-                            <div class="card-price float-left">{{ this.price }}</div>
-                            <a href="/add-to-cart/{{ this._id }}" class="btn btn-warning float-right" role="button">Add to cart</a>
+    <div class="col-md-10">
+        <div class="row offset-md-5" style="margin-top:10px;">
+            <div id="success" class="alert alert-success" {{#if noMessages}} hidden {{/if}} style="padding: 10px;">
+                {{ successMsg }}
+                {{deletedItemMsg}}
+                {{editItemMsg}}
+            </div>
+        </div>
+
+        {{# each products}}
+            <div class="row card-row">
+                {{# each this }}
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-image">
+                                <img src="{{ this.imagePath }}" class="card-img-top" alt="CheeseImage"/> <!--./images/cheesenavbar.png-->
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">{{ this.title }}</h5>
+                                <p class="card-text">{{ this.description }}</p>
+                                <div class="clearfix">
+                                    <div class="card-price float-left">{{ this.price }}</div>
+                                    <a href="/add-to-cart/{{ this._id }}" class="btn btn-warning float-right" role="button">Add to cart</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
+                {{/each}}
             </div>
         {{/each}}
-    </div>
-{{/each}}
+
+        <div class="row" style="margin-top: 20px;">
+            <div aria-label="Page navigation example" class="col-md-2 offset-md-5">
+                <ul class="pagination">
+                    {{#if (ifeq searchedFlag false)}}
+                        {{#if (ifeq currentPage 1)}}
+                            <li class="page-item active">
+                                <a class="page-link" href="/cheese/{{currentPage}}" aria-label="Next">
+                                    {{currentPage}}
+                                </a>
+                            </li>
+                            {{#if (greaterThan totalPages 1) }}
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{increment currentPage}}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            {{/if}}
+                        {{/if}}
+
+                        {{#if (greaterThan currentPage 1)}}
+                            {{#if (greaterThan totalPages currentPage)}}
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{decrement currentPage}}" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="/cheese/{{currentPage}}" aria-label="Next">
+                                        {{currentPage}}
+                                    </a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{increment currentPage}}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            {{/if}}
+                        {{/if}}
+
+                        {{#if (ifeq currentPage totalPages)}}
+                            {{#if (greaterThan currentPage 1)}}
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{decrement currentPage}}" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="/cheese/{{currentPage}}" aria-label="Next">
+                                        {{currentPage}}
+                                    </a>
+                                </li>
+                            {{/if}}
+                        {{/if}}
+                    {{else}}
+                        {{#if (ifeq currentPage 1)}}
+                            <li class="page-item active">
+                                <a class="page-link" href="/cheese/{{currentPage}}/?searchByName={{searchedName}}&searchByCategory={{searchedCategory}}" aria-label="Next">
+                                {{currentPage}}
+                                </a>
+                            </li>
+                            {{#if (greaterThan totalPages 1) }}
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{increment currentPage}}/?searchByName={{searchedName}}&searchByCategory={{searchedCategory}}" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            {{/if}}
+                        {{/if}}
+
+                        {{#if (greaterThan currentPage 1)}}
+                            {{#if (greaterThan totalPages currentPage)}}
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{decrement currentPage}}/?searchByName={{searchedName}}&searchByCategory={{searchedCategory}}" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="/cheese/{{currentPage}}/?searchByName={{searchedName}}&searchByCategory={{searchedCategory}}" aria-label="Next">
+                                    {{currentPage}}
+                                    </a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{increment currentPage}}/?searchByName={{searchedName}}&searchByCategory={{searchedCategory}}" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            {{/if}}
+                        {{/if}}
+
+                        {{#if (ifeq currentPage totalPages)}}
+                            {{#if (greaterThan currentPage 1)}}
+                                <li class="page-item">
+                                    <a class="page-link" href="/cheese/{{decrement currentPage}}/?searchByName={{searchedName}}&searchByCategory={{searchedCategory}}" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="/cheese/{{currentPage}}/?searchByName={{searchedName}}&searchByCategory={{searchedCategory}}" aria-label="Next">
+                                    {{currentPage}}
+                                    </a>
+                                </li>
+                            {{/if}}
+                        {{/if}}
+                    {{/if}}
+                </ul>
+            </div>
+        </div>
 
     </div>
 </div>
