Search functionality for User - Search by name.

--- a/node-cheese-cake/views/shop/cheese.hbs
+++ b/node-cheese-cake/views/shop/cheese.hbs
@@ -1,6 +1,6 @@
 <div class="row" style="min-height: 100%;">
     <div class="col-md-2" style="background-color: #DEDEDE; padding: 10px;min-height:100%">
-        <form action="/" method="GET">
+        <form action="/cheese" method="GET">
             <div class="form-group">
                 <label for="searchByName">Search</label>
                 <input type="text" class="form-control" name="searchByName" placeholder="Search by Name">
