--- a/node-cheese-cake/views/partials/footer.hbs
+++ b/node-cheese-cake/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 bg-dark text-center" style="margin-top: 95vh">
     <div class="container">
-        <span class="text-muted"> Cheese Store Website - Gayatri Sapara, Prajjwal Bhargava, Paril Doshi </span>
+        <span class="text-muted"> Cheese Store Website - Gayatri Sapra, Prajjwal Bhargava, Paril Doshi </span>
     </div>
 </footer>
