--- a/node-cheese-cake/views/shop/admin-add.hbs
+++ b/node-cheese-cake/views/shop/admin-add.hbs
@@ -1,24 +1,24 @@
 <div class="container">
-<h1> New Movie </h1>
+<h1>Add Cheese Product</h1>
 
 <form action="/cheese" method="POST">
   <div class="form-group">
-	<input type="text" name="title" class="form-control" placeholder="title">
+	<input type="text" name="title" class="form-control" placeholder="title" required>
   </div>
   <div class="form-group">	
-	<input type="text" name="category" class="form-control" placeholder="category">
+	<input type="text" name="category" class="form-control" placeholder="category" required>
   </div>
   <div class="form-group">
-	<input type="text" name="stock" class="form-control" placeholder="stock">
+	<input type="number" name="stock" class="form-control" placeholder="Stock" min="0" required>
   </div>
   <div class="form-group">
-	<textarea name="price" class="form-control" placeholder="price"></textarea>
+	<input type="number" name="price" class="form-control" placeholder="Price" min="1" required>
   </div>
   <div class="form-group">
-	<textarea name="description" class="form-control" placeholder="description"></textarea>
+	<textarea name="description" class="form-control" placeholder="description" required></textarea>
   </div>
   <div class="form-group">
-	<textarea name="imagePath" class="form-control" placeholder="imagePath"></textarea>
+	<textarea name="imagePath" class="form-control" placeholder="imagePath" required></textarea>
   </div>
   <div class="form-group">
 	<button type="Submit" class="btn-btn-info">Save</button>
