--- a/node-cheese-cake/views/shop/admin-delete.hbs
+++ b/node-cheese-cake/views/shop/admin-delete.hbs
@@ -1,5 +1,5 @@
 <link rel = "stylesheet" href = "stylesheets/main.css">
-
+<br>
 <div class="alert alert-danger" role="alert">
   Delete an item in database
 </div>
@@ -7,9 +7,11 @@
 {{#each items}}
 <div>
     {{#each this}}
-    <form method="POST" action="/shop/item-delete/{{ this._id }}">
-        <button type="submit" class="btn btn-primary">{{ this.title }}</button>
-    </form>
+    {{#if title}}
+      <form method="POST" action="/shop/item-delete/{{ this._id }}">
+        <button type="submit" class="btn btn-danger">{{ this.title }}</button>
+      </form>
+    {{/if}}  
     {{/each}}
 </div>
 {{/each}}
