--- a/node-cheese-cake/views/shop/admin-update.hbs
+++ b/node-cheese-cake/views/shop/admin-update.hbs
@@ -1,28 +1,17 @@
-<div class="container">
-<h1>Edit Movie Details</h1>
-
-<form action="/videos/<%= video._id %>?_method=PUT" method="POST">
-  <div class="form-group">
-	<input type="text" name="title" class="form-control" value="<%= video.title %>">
-  </div>
-
-  <div class="form-group">	
-	<input type="text" name="genre" class="form-control" value="<%= video.genre %>">
-  </div>
-  
-  <div class="form-group">
-	<input type="text" name="image" class="form-control" value="<%= video.image %>">
-  </div>
-  
-  <div class="form-group">
-	<textarea name="description" class="form-control"><%= video.description %></textarea>
-  </div>
-  
-  <div class="form-group">
-	<button type="Submit" class="btn-btn-info">Save</button>
-  </div>
-</form>
-
-<a href = "/">Cancel </a>
-
+<link rel = "stylesheet" href = "stylesheets/main.css">
+<br>
+<div class="alert alert-danger" role="alert">
+  Update an Item in Database
 </div>
+
+{{#each items}}
+<div>
+    {{#each this}}
+    {{#if title}}
+      <form action = "/shop/item-update/{{ this._id }}" method = "POST">
+        <button type="submit" class="btn btn-warning">{{ this.title }}</button>
+      </form>
+    {{/if}}  
+    {{/each}}
+</div>
+{{/each}}
