--- a/node-cheese-cake/views/user/signup.hbs
+++ b/node-cheese-cake/views/user/signup.hbs
@@ -12,18 +12,29 @@
             <form class="signup log-user" action="/user/signup" id="registration" method="POST">
                 <div class="form-group">
                     <label for="name" class="form-label">Name</label>
+                    <div id="name-message"></div>
+                    <div class="col-md-1">
+                        <span id="name-ok"><i class="fa fa-check" aria-hidden="true"></i></span>
+                    </div>
                     <input type="text" class="form-control" name="name" id="name">
                 </div>
                 <div class="form-group">
                     <label for="email" class="form-label">Email address</label>
+                    <div id="email-message"></div>
+                    <div class="col-md-1">
+                        <span id="email-ok"><i class="fa fa-check" aria-hidden="true"></i></span>
+                    </div>
                     <input type="email" class="form-control" name="email" id="email">
                 </div>
                 <div class="form-group">
                     <label for="password" class="form-label">Password</label>
+                    <div id="password-message"></div>
                     <input type="password" class="form-control" name="password" id="password">
                 </div>
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <button type="submit" class="btn-primary">Sign Up</button>
+                <input type="hidden" id = "_csrf" name="_csrf" value="{{ csrfToken }}">
+                <button type="submit" class="btn-primary" name="submit" id="signUpSubmit">Sign Up</button>
+
+                <div id="submit-message"></div>
             </form>
         </div>
     </div>
