--- a/node-cheese-cake/views/shop/admin-add.hbs
+++ b/node-cheese-cake/views/shop/admin-add.hbs
@@ -18,7 +18,7 @@
 	<textarea name="description" class="form-control" placeholder="description" required></textarea>
   </div>
   <div class="form-group" >
-    <input type='submit' value='Upload a picture'/>
+    <label for = "image">Upload a picture</label>
     <input type="file" name="image" />
   </div>
   <div class="form-group">
