--- a/node-cheese-cake/views/shop/update-product.hbs
+++ b/node-cheese-cake/views/shop/update-product.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-<h1>Add Cheese Product</h1>
+<h1>Edit Cheese Product: {{this.title}}</h1>
 
 <form method="POST" action="/shop/item-update-values/{{ this._id }}" ref = "uploadForm" id="uploadForm" encType="multipart/form-data">
   <div class="form-group">
@@ -21,8 +21,8 @@
 	<textarea name="imagePath" class="form-control" placeholder="imagePath" required>{{this.imagePath}}</textarea>
   </div> --}}
   <div class="form-group" >
-    <input type='submit' value='Upload a picture'/>
-    <input type="file" name="image" />
+    <label for = "image">Upload a picture</label>
+    <input type="file" name="image"/>
   </div>
   <div class="form-group">
 	<button type="Submit" class="btn-btn-info">Save</button>
