Allows User to Increase Item Quantity in Cart

--- a/node-cheese-cake/views/shop/shopping-cart.hbs
+++ b/node-cheese-cake/views/shop/shopping-cart.hbs
@@ -25,6 +25,7 @@
                                 <div class="btn-group">
                                     <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Action <span class="caret"></span></button>
                                     <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/increase/{{this.item._id}}">Increase By 1</a></li>
                                         <li><a class="dropdown-item" href="/reduce/{{this.item._id}}">Reduce By 1</a></li>
                                         <li><a class="dropdown-item" href="/remove/{{this.item._id}}/">Remove All</a></li>
                                     </ul>
