--- a/node-cheese-cake/views/partials/header.hbs
+++ b/node-cheese-cake/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light header-backspace-color">
     <a class="navbar-brand" href="/">
-        <img src="../images/cheesenavbar.png" width="60" height="60" alt="" loading="lazy">
+        <img src="http://localhost:3000/images/cheesenavbar.png" width="60" height="60" alt="" loading="lazy">
     </a>
 
     <div class="navbar-collapse" id="navbarNavDropdown">
