--- a/node-cheese-cake/views/shop/cheese.hbs
+++ b/node-cheese-cake/views/shop/cheese.hbs
@@ -5,6 +5,17 @@
                 <label for="searchByName">Search</label>
                 <input type="text" class="form-control" name="searchByName" placeholder="Search by Name">
             </div>
+            <div class="form-group">
+                <label for="searchByCategory">Filter</label>
+                <select class="form-control" name="searchByCategory">
+                    <option selected> </option>
+                    <option value="Slices">Slices</option>
+                    <option value="Small Cubes">Small Cubes</option>
+                    <option value="Creamy">Creamy</option>
+                    <option value="Shredded">Shredded</option>
+                    <option value="Grated">Grated</option>
+                </select>
+            </div>
             <button type="submit" class="btn-dark">Search</button>
         </form>
     </div>
@@ -33,7 +44,7 @@
                     <div class="card" style="width: 18rem;">
                         
                         <div class="card-image">
-                            <img src="{{ this.imagePath }}" class="card-img-top" alt="CheeseImage"/> <!--./images/cheesenavbar.png-->
+                            <img src="{{ this.imagePath }}" class="card-img-top" alt="CheeseImage" style="width:150px;height:150px;"/> <!--./images/cheesenavbar.png-->
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">{{ this.title }}</h5>
