--- a/node-cheese-cake/views/shop/update-product.hbs
+++ b/node-cheese-cake/views/shop/update-product.hbs
@@ -3,23 +3,25 @@
 
 <form method="POST" action="/shop/item-update-values/{{ this._id }}" ref = "uploadForm" id="uploadForm" encType="multipart/form-data">
   <div class="form-group">
+    <label for="title" class="form-label">Title</label>
 	<input type="text" name="title" class="form-control" placeholder="title" value = "{{this.title}}" required>
   </div>
-  <div class="form-group">	
+  <div class="form-group">
+    <label for="category" class="form-label">Category</label>
 	<input type="text" name="category" class="form-control" placeholder="category" value = "{{this.category}}" required>
   </div>
   <div class="form-group">
+    <label for="stock" class="form-label">Stock</label>
 	<input type="number" name="stock" class="form-control" placeholder="Stock" min="0" value = "{{this.stock}}" required>
   </div>
   <div class="form-group">
+    <label for="price" class="form-label">Price</label>
 	<input type="number" name="price" class="form-control" placeholder="Price" min="1" value = "{{this.price}}" required>
   </div>
   <div class="form-group">
+    <label for="description" class="form-label">Description</label>
 	<textarea name="description" class="form-control" placeholder="description" required>{{this.description}}</textarea>
   </div>
-  {{!-- <div class="form-group">
-	<textarea name="imagePath" class="form-control" placeholder="imagePath" required>{{this.imagePath}}</textarea>
-  </div> --}}
   <div class="form-group" >
     <label for = "image">Upload a picture</label>
     <input type="file" name="image"/>
@@ -29,6 +31,6 @@
   </div>
 </form>
 
-<a href = "/">Cancel </a>
+<a href = "/cheese">Cancel </a>
 
 </div>
