--- a/node-cheese-cake/views/shop/admin-add.hbs
+++ b/node-cheese-cake/views/shop/admin-add.hbs
@@ -19,7 +19,7 @@
   </div>
   <div class="form-group" >
     <label for = "image">Upload a picture</label>
-    <input type="file" name="image" />
+    <input type="file" name="image" accept="image/png, image/jpeg"/>
   </div>
   <div class="form-group">
 	<button type="Submit" class="btn-btn-info">Save</button>
