--- a/node-cheese-cake/views/shop/shopping-cart.hbs
+++ b/node-cheese-cake/views/shop/shopping-cart.hbs
@@ -38,15 +38,19 @@
         </div>
     </div>
 
+    <br>
+    
     <div class="row">
         <div class="col-sm-6 col-md-5 col-md-offset-3 col-sm-offset-3">
             <strong>Total: ${{this.totalPrice}}</strong>
         </div>
     </div>
 
+    <br>
+
     <div class="row">
         <div class="col-sm-6 col-md-5 col-md-offset-3 col-sm-offset-3">
-            <a href="/checkout" type="button" class="btn btn-success">Checkout</a>
+            <a href="/checkout" role="button" class="btn btn-primary">Checkout</a>
         </div>
     </div>
 {{else}}
