--- a/node-cheese-cake/views/shop/admin-add.hbs
+++ b/node-cheese-cake/views/shop/admin-add.hbs
@@ -18,8 +18,8 @@
 	<textarea name="description" class="form-control" placeholder="description" required></textarea>
   </div>
   <div class="form-group" >
-    <input type='submit' value='Upload a picture'/>
-    <input type="file" name="image" />
+    <label for = "image">Upload a picture</label>
+    <input type="file" name="image" accept="image/png, image/jpeg"/>
   </div>
   <div class="form-group">
 	<button type="Submit" class="btn-btn-info">Save</button>
